--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 pyparsing==3.2.3
 PyPDF2==3.0.1
+python-pptx==0.6.21 
 python-docx==1.1.2
 requests==2.32.3
 rsa==4.9
